--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 </div>
             </li>
             <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="handson/index.html" id="navbarDropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                <a class="nav-link dropdown-toggle" href="handson/" id="navbarDropdown" role="button" aria-haspopup="true" aria-expanded="false">
                   Hands-On
                 </a>
                 <div class="dropdown-menu bg-secondary" aria-labelledby="navbarDropdown">
@@ -63,7 +63,7 @@
                 </div>
             </li>
             <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="current/index.html" id="navbarDropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                <a class="nav-link dropdown-toggle" href="current/" id="navbarDropdown" role="button" aria-haspopup="true" aria-expanded="false">
                   Current Topics
                 </a>
                 <div class="dropdown-menu bg-secondary" aria-labelledby="navbarDropdown">
